--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-﻿PyMuPDF==1.24.4
+﻿# requirements.txt
+PyMuPDF==1.24.4
 orjson==3.10.3
-# Add scikit-learn later (Step 5/6) to keep image smaller during early iteration
 reportlab==4.0.9
 python-bidi==0.4.2
 arabic-reshaper==3.0.0
-torch
-sentence-transformers
-networkx
-numpy
+
+torch==2.2.1+cpu          --extra-index-url https://download.pytorch.org/whl/cpu
+sentence-transformers==2.2.2
+scikit-learn==1.5.0
+networkx==3.3
+numpy==1.26.4
