--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-﻿# requirements.txt
-PyMuPDF==1.24.4
+﻿PyMuPDF==1.24.4
 orjson==3.10.3
 reportlab==4.0.9
 python-bidi==0.4.2
 arabic-reshaper==3.0.0
-
-torch==2.2.1+cpu          --extra-index-url https://download.pytorch.org/whl/cpu
-sentence-transformers==2.2.2
+sentence-transformers==2.6.1     
+huggingface_hub==0.22.2
 scikit-learn==1.5.0
 networkx==3.3
 numpy==1.26.4
+rapidfuzz==3.5.2
+rank_bm25==0.2.2
